<resources>
    <string name="app_name">Моя ферма</string>
    <string name="main_column_text">Главная</string>
    <string name="animals_column_text">Животные</string>
    <string name="feed_column_text">Кормление</string>
    <string name="pregnancy_column_text">Беременность</string>
    <string name="settings_column_text">Настройки</string>
    <string name="category">category</string>
    <string name="animal_type_image">animalTypeImage</string>
    <string name="new_animal_title">Добавление животного</string>
    <string name="animal_page_text">Страница животного</string>
    <string name="animal_name">Кличка:</string>
    <string name="chest_girth_text">Обхват груди (см):</string>
    <string name="body_length_text">Длина туловища (cм):</string>
    <string name="add_value">Доп. данные (для 2 способа):</string>
    <string name="calc_way">Способ расчёта</string>
    <string name="animal_type">Вид/порода:</string>
    <string name="animal_birthdate">Дата рождения:</string>
    <string name="animal_age">Возраст (полных лет):</string>
    <string name="short_animal_age">Возраст:</string>
    <string name="animal_birthdate_month">Месяц рождения:</string>
    <string name="save_animal_button_text">СОХРАНИТЬ ИЗМЕНЕНИЯ</string>
    <string name="save_animal_weight">СОХРАНИТЬ МАССУ ЖИВОТНОГО</string>
    <string name="add_animal_button_text">ДОБАВИТЬ ЖИВОТНОЕ</string>
    <string name="change_weight_button_text">Изменить массу</string>
    <string name="new_pregnancy_text">Добавить беременность</string>
    <string name="calc_button_text">Рассчитать массу</string>
    <string name="animal_data">Добавить данные</string>
    <string name="delete_animal_text">Удалить животное</string>
    <string name="sex_male_text">М   </string>
    <string name="select_date_text">___________</string>
    <string name="first_text">1</string>
    <string name="second_text">2</string>
    <string name="short_kg">КГ</string>
    <string name="greetings_of_fragment">Добро пожаловать! \n\nВыберите животное \nдля просмотра графика \nизменения массы.</string>
    <string name="pregnancy_description">Для изменения настроек уведомлений</string>
    <string name="pregnancy_description_two">или удаления, нужно поставить соответствующую галку и нажать на необходимую беременность</string>
    <string name="notify">Уведомить?</string>
    <string name="child_birth_date_text">Роды с</string>
    <string name="delete_pregnancy_text">Удалить беременность</string>
    <string name="reset_short_text">Х</string>
    <string name="female_short_text">Ж</string>
    <string name="weight_text">Масса животного (в КГ):</string>
    <string name="weight_calc">Расчёт примерной массы</string>
    <string name="greetings_text">Добро пожаловать! \n Нажмите на изображение животного, \n чтобы добавить его в систему!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>